# taller_tp_final

./: .gitignore  README.md
.codelite/: TALLER_FINAL.session
GenMap/: JsonHandler.cpp  JsonHandler.h  MakefileGenMap  MapDescriptor.cpp  MapDescriptor.h  UnitsInMap.cpp  UnitsInMap.h  jsoncpp.cpp  main.cpp
z/: CMakeLists.txt  Makefile_client_server  clientGame  serverConfig.txt  serverGame
z/client/: Animation.cpp  Animation.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera2.cpp  Camera2.h  Casillas.cpp  Casillas.h  ClickableButton.cpp  ClickableButton.h  ClickableButtonCreateUnit.cpp  ClickableButtonCreateUnit.h  ClickableButtonGrunt.cpp  ClickableButtonGrunt.h  ClickableButtonHeavyTank.cpp  ClickableButtonHeavyTank.h  ClickableButtonJeep.cpp  ClickableButtonJeep.h  ClickableButtonLaser.cpp  ClickableButtonLaser.h  ColorToType.cpp  ColorToType.h  ConstantsInterpretor.cpp  ConstantsInterpretor.h  Drawer.cpp  Drawer.h  EventHandler.cpp  EventHandler.h  Factory_Units.cpp  Factory_Units.h  Flag.cpp  Flag.h  Fort.cpp  Fort.h  Game_map.cpp  Game_map.h  Grunt.cpp  Grunt.h  InfoGameSelection.cpp  (+50 more)
z/common/: Lock.cpp  Lock.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  constants.h
z/server/: Attack.cpp  Attack.h  Event.cpp  Event.h  JsonHandler.cpp  JsonHandler.h  JsonUnitInfoHandler.cpp  JsonUnitInfoHandler.h  Map.h  MapLoader.cpp  MapLoader.h  Protocol.cpp  Protocol.h  Terrain.h  Tile.cpp  Tile.h  aStart.cpp  actualizeUnit.cpp  actualizeUnit.h  armament.cpp  armament.h  attack.cpp  attack.h  attackBehaviour.cpp  attackBehaviour.h  attackHandler.cpp  attackHandler.h  behaviour.cpp  behaviour.h  captureHandler.cpp  captureHandler.h  clientManager.cpp  clientManager.h  clientMenu.cpp  clientMenu.h  configParser.cpp  configParser.h  constants.cpp  constants.h  createBehaviour.cpp  (+45 more)
z/server/maps/: Lava.json  Lava2.json  Nieve.json  Nieve3.json  Nieve4.json  Prueba2.json  dataLava.json  dataLava2.json  dataNieve.json  dataNieve3.json  dataNieve4.json  dataPrueba1.json  dataPrueba2.json  datamap.json  map.json  unitsLava.json  unitsLava2.json  unitsMap.json  unitsNieve.json  unitsNieve3.json  unitsNieve4.json  unitsPrueba2.json  unitsmap.json
z/server/unitsInfo/: unitsInfo.json
